# flux

./: .gitignore  Arctica.scm  README  config.scm  flux.scm  params.scm  run.sh  test.scm
extensions/: cartesian-grid.scm  staggered-grid.scm
flux/: Makefile  cartesian-grid.scm  cartesian_grid.h  sor-solver.scm  staggered-grid.scm
lib/: Makefile  cartesian-grid.scm  cartesian_grid.c  cartesian_grid.cc  cartesian_grid.h  config.h  jacobi-solver.scm  jacobi_solver.cc  sor-solver.scm  sor_solver.c  staggered-grid.scm
modules/marco/: libwrap.scm  utils.scm
modules/numerics/: Makefile  cartesian-grid.scm  cartesian_grid.c  staggered-grid.scm
modules/opengl/: gl.scm
modules/sdl2/: error.scm  events.scm  main.scm  render.scm  ttf.scm  video.scm
nusif-mpi/: CMakeLists.txt  TODO  cleanup.sh  poisson.par
nusif-mpi/slides/: data.org  domain.in  nusif.org
nusif-mpi/src/: Array.cc  Array.hh  CMakeLists.txt  Debug.cc  Debug.hh  FileReader.cc  FileReader.hh  FluidSimulator.cc  FluidSimulator.hh  GrayScaleImage.cc  GrayScaleImage.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.hh  VTKWriter.cc  VTKWriter.hh  backstep.par  backstep_short.par  dcavity.par  main.cc
nusif-mpi/src/QtVisualization/: GridView.cc  GridView.hh  moc_GridView.cxx
opengl/: Makefile  gl.c  gl.cc  gl.scm
sdl2/: error.scm  events.scm  main.scm  render.scm  ttf.scm  video.scm
utils/: marco.scm
